# RaspPi_LED_Controller

./: .gitmodules  Build_All_Deploy.txt  CMakeLists.txt  LICENSE  README.md  i2s_microphone.h  main  main.cpp  package-lock.json  package.json
back_end/: RPIConfigEditor.h  SignalFactory.h  SystemStatusMonitor.h  deployment_manager.h  fft_computer.cpp  fft_computer.h  guarddog.cpp  guarddog.h  i2s_microphone.cpp  i2s_microphone.h  led_controller.cpp  led_controller.h  logger.cpp  logger.h  main.cpp  signal.cpp  signal.h  signal.tpp  websocket_server.cpp  websocket_server.h  websocket_session.cpp  websocket_session.h  ws281x_led_controller.h
back_end/animation/: ColorFunctions.h  FFTAnimation.cpp  FFTAnimation.h  PixelGridAnimation.cpp  PixelGridAnimation.h  PixelGridSignal.cpp  PixelGridSignal.h  RainbowAnimation.cpp  RainbowAnimation.h
back_end/signals/: IntVectorSignal.h  PixelGridSignal.cpp  PixelGridSignal.h  SignalFactory.h  signal.cpp  signal.h  signal.tpp
back_end/signals/DataTypesAndEncoders/: BinData.h  DataTypesAndEncoders.h  Encoder_Binary.h  Encoder_Json.h  Encoder_String.h
data/: index.html
front_end/: index2.html  package-lock.json  package.json  vite.config.ts
front_end/src/: App.tsx  Screens.tsx  index.css  main.tsx
front_end/src/components/: DualSignalPlot.tsx  HorizontalGauge.tsx  Incrementer.tsx  LEDBoardTempGauge.tsx  LedRow.tsx  LiveBarChart.tsx  MirroredBarChart.tsx  MirroredVerticalBarChart.tsx  RenderingTick.tsx  ScrollingHeatMap.tsx  SignalValueTextbox.tsx  StreamingScatterPlot.tsx  ValueSelector.tsx  WebSocketContext.tsx  WebSocketWrapper.tsx
front_end/src/utils/: RateLimitedLogger.ts
src/: deployment_manager.h  fft_computer.h  i2s_microphone.h  logger.cpp  logger.h  main.cpp  ring_buffer.h  signal.h  websocket_server.cpp  websocket_server.h
